Doctor leave Remove By Date Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/channel/channel_doctor_leave.xhtml
+++ b/src/main/webapp/channel/channel_doctor_leave.xhtml
@@ -53,7 +53,7 @@
                     <f:ajax event="dateSelect" execute="@this"  />
                 </p:calendar>
                 <p:outputLabel/>
-                <p:commandButton ajax="false" value="Add" action="#{serviceSessionLeaveController.addLeave}" onclick="onSubmitButton();"/>
+                <p:commandButton ajax="false" value="Add" action="#{serviceSessionLeaveController.removeLeave}" onclick="onSubmitButton();"/>
             </h:panelGrid>
 
         </h:form>
