--- a/src/main/webapp/channel/channel_booking.xhtml
+++ b/src/main/webapp/channel/channel_booking.xhtml
@@ -476,6 +476,12 @@
 
                         <h:panelGroup id="panelAddedBillPrint" styleClass="noBorder" rendered="#{channelBillController.settleSucessFully}" >
 
+
+                            <div>
+                                <h:panelGroup rendered="#{sessionController.institutionPreference.opdBillPaperType eq 'Paper24_2x9_3'}">
+                                    <ch:channelRecipt_24_2x9_3 bill="#{channelBillController.printingBill}" dup="false"/>
+                                </h:panelGroup>
+                            </div>
                             <div >
 
                                 <h:panelGroup rendered="#{sessionController.institutionPreference.opdBillPaperType eq 'FiveFivePaper'}">
@@ -497,6 +503,7 @@
 
                                 </h:panelGroup>
                             </div>
+                        
                         </h:panelGroup>
 
                         <h:panelGroup  styleClass="noBorder" rendered="#{!channelBillController.settleSucessFully}" >
@@ -708,8 +715,15 @@
 
 
                             <h:panelGroup id="panelAddedBillPrintRe" styleClass="noBorder" >
+
+                                <div>
+                                    <h:panelGroup rendered="#{sessionController.institutionPreference.channelBillPaperType ne 'Paper24_2x9_3'}">                                        
+                                        <ch:channelRecipt_24_2x9_3 bill="#{channelBillController.billSession.billItem.bill}" dup="true"/>
+                                    </h:panelGroup>
+                                </div>
+
                                 <div >
-                                    <h:panelGroup rendered="#{sessionController.institutionPreference.opdBillPaperType eq 'FiveFivePaper'}">
+                                    <h:panelGroup rendered="#{sessionController.institutionPreference.channelBillPaperType eq 'FiveFivePaper'}">
                                         <h:panelGroup rendered="#{!sessionController.institutionPreference.pharmacyBillPrabodha}" > 
                                             <ch:channelRecipt bill="#{channelBillController.billSession.billItem.bill}" dup="true"/>
                                             <ch:channelRecipt bill="#{channelBillController.billSession.billItem.bill}" dup="true"/>
@@ -717,7 +731,7 @@
                                     </h:panelGroup>
                                 </div>
                                 <div >
-                                    <h:panelGroup rendered="#{sessionController.institutionPreference.opdBillPaperType eq 'PosPaper'}">
+                                    <h:panelGroup rendered="#{sessionController.institutionPreference.channelBillPaperType eq 'PosPaper'}">
                                         <h:panelGroup rendered="#{sessionController.institutionPreference.pharmacyBillPrabodha}" > 
                                             <ch:channelReciptPosDouble bill="#{channelBillController.billSession.billItem.bill}" dup="true"/>
                                         </h:panelGroup>
