--- a/src/main/webapp/channel/channel_booking.xhtml
+++ b/src/main/webapp/channel/channel_booking.xhtml
@@ -478,7 +478,7 @@
 
 
                             <div>
-                                <h:panelGroup rendered="#{sessionController.institutionPreference.opdBillPaperType eq 'Paper24_2x9_3'}">
+                                <h:panelGroup rendered="#{sessionController.institutionPreference.opdBillPaperType ne 'Paper24_2x9_3'}">
                                     <ch:channelRecipt_24_2x9_3 bill="#{channelBillController.printingBill}" dup="false"/>
                                 </h:panelGroup>
                             </div>
@@ -503,7 +503,7 @@
 
                                 </h:panelGroup>
                             </div>
-                        
+
                         </h:panelGroup>
 
                         <h:panelGroup  styleClass="noBorder" rendered="#{!channelBillController.settleSucessFully}" >
@@ -717,8 +717,8 @@
                             <h:panelGroup id="panelAddedBillPrintRe" styleClass="noBorder" >
 
                                 <div>
-                                    <h:panelGroup rendered="#{sessionController.institutionPreference.channelBillPaperType ne 'Paper24_2x9_3'}">                                        
-                                        <ch:channelRecipt_24_2x9_3 bill="#{channelBillController.billSession.billItem.bill}" dup="true"/>
+                                    <h:panelGroup rendered="#{sessionController.institutionPreference.channelBillPaperType ne 'Paper24_2x9_3'}">
+                                            <ch:channelRecipt_24_2x9_3 bill="#{channelBillController.billSession.billItem.bill}" dup="true"/>                                        
                                     </h:panelGroup>
                                 </div>
 
