existing report Signed-off-by: lahirumadushanka <lahirumadushanka2100@gmail.com>

--- a/src/main/webapp/lab_administration.xhtml
+++ b/src/main/webapp/lab_administration.xhtml
@@ -40,6 +40,7 @@
                                         <p:commandButton  styleClass="linkButton" ajax="false" value="Dynamic Labels" action="lab_dynamic_labels" onclick="onSubmitButton();" />
                                         <p:commandButton  styleClass="linkButton" ajax="false" value="Validators" action="lab_investigation_value_component" onclick="onSubmitButton();" />
                                         <p:commandButton  styleClass="linkButton" ajax="false" value="Antibiotics" action="lab_antibiotic" onclick="onSubmitButton();" />
+                                        <p:commandButton  styleClass="linkButton" ajax="false" value="Report Existing" action="/reportLab/investigation_existing" onclick="onSubmitButton();" />
                                     </h:panelGrid>
                                 </p:panel>                                    
                             </h:panelGrid>  
