--- a/src/main/webapp/channel/channel_agent_referece_book.xhtml
+++ b/src/main/webapp/channel/channel_agent_referece_book.xhtml
@@ -5,7 +5,7 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:ch="http://java.sun.com/jsf/composite/channel"
-                xmlns:f="http://xmlns.jcp.org/jsf/core"
+                xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:pe="http://primefaces.org/ui/extensions" >
 
     <ui:define name="content">
