--- a/src/main/webapp/lab_administration.xhtml
+++ b/src/main/webapp/lab_administration.xhtml
@@ -52,8 +52,10 @@
                                         <p:commandButton  styleClass="linkButton" ajax="false" value="Lab Investigation List by Category" action="lab_investigation_list_by_category" onclick="onSubmitButton();" />
                                     </h:panelGrid>                                        
                                 </p:panel>
-                                <p:panel header="Developer" style="width: 400px;margin: auto;" collapsed="false" toggleable="true">
-                                    <p:commandButton  styleClass="linkButton" ajax="false" value="Other" action="lab_administration_extra" onclick="onSubmitButton();" />
+                                <p:panel header="Setup" style="width: 400px;margin: auto;" collapsed="false" toggleable="true">
+                                    
+                                    <p:commandButton  styleClass="linkButton" ajax="false" value="Report Samples" actionListener="#{investigationController.listAllIxs}" action="/lab/report_samples" onclick="onSubmitButton();" />
+                                    <p:commandButton  styleClass="linkButton" ajax="false" value="Developer" action="lab_administration_extra" onclick="onSubmitButton();" />
                                 </p:panel>
                             </h:panelGrid>
 
