--- a/src/main/webapp/lab/report_samples.xhtml
+++ b/src/main/webapp/lab/report_samples.xhtml
@@ -6,68 +6,85 @@
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:p="http://primefaces.org/ui"
-                xmlns:poue="http://primefaces.org/ui/extensions">
+                xmlns:poue="http://primefaces.org/ui/extensions"
+                xmlns:ez="http://java.sun.com/jsf/composite/ezcomp"
+                >
 
 
     <ui:define name="content">
 
-        <h:panelGroup >
-            <h:form id="form"  >
-                <p:growl autoUpdate="true" />
-                <p:panel id="panIx"  >
 
-                    <f:facet name="header" >
-                        <h:outputLabel value="List of All Investigations"></h:outputLabel>
-                        <p:commandButton ajax="false" value="Generate Report Samples" action="#{investigationController.listAllIxs}" styleClass="noPrintButton" onclick="onSubmitButton();"  />
-                        <p:commandButton ajax="false" value="Print" styleClass="noPrintButton" >
-                            <p:printer target="panIx" />
-                        </p:commandButton>
-                        <p:commandButton id="excel" ajax="false" value="Excel" onclick="onSubmitButton();"  >
-                            <p:dataExporter target="tbl" type="xls" fileName="List of All Investigations"  />
-                        </p:commandButton>
-                    </f:facet>
-                    <div id="printHeader" style="text-align: center; font-family: serif;">
-                        <h:outputLabel value="#{sessionController.institution.name}" style="font-size: 20px;"></h:outputLabel>
-                        <br> </br>
-                        <h:outputLabel value="Lab Investigation List" style="font-family: serif;" ></h:outputLabel>
-                    </div>
-                    <p:dataTable id="tbl" rowIndexVar="rowIndex" 
-                                 value="#{investigationController.allIxs}" 
-                                 var="ix" rowKey="#{ix.id}" 
-                                 rows="20" selection="#{investigationController.selectedIxs}"
-                                 paginator="true"
-                                 paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                                 rowsPerPageTemplate="10,20,50,100,500,1000"
-                                 >
-                        <p:column headerText="Select" selectionMode="multiple" >
-                        </p:column> 
-                        <p:column headerText="No." >
-                            <h:outputLabel value="#{rowIndex + 1}" ></h:outputLabel>
-                        </p:column>  
-                        <p:column headerText="Investigation" sortBy="#{ix.name}" filterBy="#{ix.name}" filterMatchMode="contains" >
-                            <h:outputLabel value="#{ix.name}" ></h:outputLabel>
-                        </p:column>
-                        <p:column headerText="Category" sortBy="#{ix.category.name}" filterBy="#{ix.category.name}" filterMatchMode="contains">
-                            <h:outputLabel value="#{ix.category.name}" ></h:outputLabel>
-                        </p:column>
-                        <p:column headerText="Institution" sortBy="#{ix.institution.name}" filterBy="#{ix.institution.name}" filterMatchMode="contains">
-                            <h:outputLabel value="#{ix.institution.name}" ></h:outputLabel>
-                        </p:column>
-                        <p:column headerText="Department" sortBy="#{ix.department.name}" filterBy="#{ix.department.name}" filterMatchMode="contains">
-                            <h:outputLabel value="#{ix.department.name}" ></h:outputLabel>
-                        </p:column>
-                        
-                    </p:dataTable>
-                </p:panel>
-            </h:form>
-        </h:panelGroup>
+        <h:form id="form"  >
 
-        <h:form>
+            <p:growl autoUpdate="true" />
+            <p:panel id="panIx" styleClass="nonPrintBlock" >
+
+                <f:facet name="header" >
+                    <h:outputLabel value="List of All Investigations"></h:outputLabel>
+                    <p:commandButton ajax="false" value="Generate Report Samples" action="#{investigationController.prepareSelectedReportSamples}" styleClass="noPrintButton" onclick="onSubmitButton();"  />
+                    <p:commandButton ajax="false" value="Print" styleClass="noPrintButton" >
+                        <p:printer target="panIx" />
+                    </p:commandButton>
+                    <p:commandButton id="excel" ajax="false" value="Excel" onclick="onSubmitButton();"  >
+                        <p:dataExporter target="tbl" type="xls" fileName="List of All Investigations"  />
+                    </p:commandButton>
+                </f:facet>
+                <div id="printHeader" style="text-align: center; font-family: serif;">
+                    <h:outputLabel value="#{sessionController.institution.name}" style="font-size: 20px;"></h:outputLabel>
+                    <br> </br>
+                    <h:outputLabel value="Lab Investigation List" style="font-family: serif;" ></h:outputLabel>
+                </div>
+                <p:dataTable id="tbl" rowIndexVar="rowIndex" 
+                             value="#{investigationController.allIxs}" 
+                             var="ix" rowKey="#{ix.id}" 
+                             rows="20" selection="#{investigationController.selectedIxs}"
+                             paginator="true"
+                             paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+                             rowsPerPageTemplate="10,20,50,100,500,1000"
+                             >
+                    <p:column headerText="Select" selectionMode="multiple" >
+                    </p:column> 
+                    <p:column headerText="No." >
+                        <h:outputLabel value="#{rowIndex + 1}" ></h:outputLabel>
+                    </p:column>  
+                    <p:column headerText="Investigation" sortBy="#{ix.name}" filterBy="#{ix.name}" filterMatchMode="contains" >
+                        <h:outputLabel value="#{ix.name}" ></h:outputLabel>
+                    </p:column>
+                    <p:column headerText="Category" sortBy="#{ix.category.name}" filterBy="#{ix.category.name}" filterMatchMode="contains">
+                        <h:outputLabel value="#{ix.category.name}" ></h:outputLabel>
+                    </p:column>
+                    <p:column headerText="Institution" sortBy="#{ix.institution.name}" filterBy="#{ix.institution.name}" filterMatchMode="contains">
+                        <h:outputLabel value="#{ix.institution.name}" ></h:outputLabel>
+                    </p:column>
+                    <p:column headerText="Department" sortBy="#{ix.department.name}" filterBy="#{ix.department.name}" filterMatchMode="contains">
+                        <h:outputLabel value="#{ix.department.name}" ></h:outputLabel>
+                    </p:column>
+
+                </p:dataTable>
 
 
+
+
+            </p:panel>
+
+            <div class="nonPrintBlock" >
+                <p:commandButton styleClass="nonPrintBlock"  ajax="false" value="Print" onclick="window.print();" />
+            </div>
+
+            <ui:repeat value="#{investigationController.selectedPatientReports}" var="pr" >
+
+                <div >
+
+                    <ez:patient_report patientReport="#{pr}"/>
+
+                </div>
+            </ui:repeat>
 
 
         </h:form>
+
+
+
 
 
     </ui:define>
