--- a/src/main/webapp/resources/ezcomp/patient_report.xhtml
+++ b/src/main/webapp/resources/ezcomp/patient_report.xhtml
@@ -112,7 +112,7 @@
                                 <td id="micromemos">
                                     <table>
                                         <ui:repeat  value="#{cc.attrs.patientReport.patientReportItemValues}" var="prv" >
-                                            <h:panelGroup rendered="#{prv.investigationItem.ixItemType eq 'Value' and prv.investigationItem.ixItemValueType eq 'Memo' and prv.investigationItem.retired eq false and prv.lobValue ne '' and prv.lobValue ne null and prv.investigationItem.transCssTop lt 50 }" >
+                                            <h:panelGroup rendered="#{prv.investigationItem.ixItemType eq 'Value' and prv.investigationItem.ixItemValueType eq 'Memo' and prv.investigationItem.retired eq false and prv.lobValue ne '' and prv.lobValue ne null and prv.investigationItem.riTop lt 50 }" >
                                                 <tr style="vertical-align: top;">
                                                     <td style="min-width: 250px;padding-left: 1px; padding-right: 1px;">
                                                         <h:outputLabel value="#{prv.investigationItem.name}"   escape="false"  />
@@ -124,7 +124,7 @@
                                             </h:panelGroup>
                                         </ui:repeat>
                                         <ui:repeat  value="#{cc.attrs.patientReport.patientReportItemValues}" var="prv" >
-                                            <h:panelGroup rendered="#{prv.investigationItem.ixItemType eq 'DynamicLabel' and prv.investigationItem.retired eq false and prv.investigationItem.transCssTop  lt 50 }" >
+                                            <h:panelGroup rendered="#{prv.investigationItem.ixItemType eq 'DynamicLabel' and prv.investigationItem.retired eq false and prv.investigationItem.riTop  lt 50 }" >
                                                 <tr >
                                                     <td >
                                                         <h:outputLabel value="#{prv.investigationItem.name}"  escape="false"  />
@@ -187,7 +187,7 @@
                                 <td id="miccomments">
                                     <table>
                                         <ui:repeat  value="#{cc.attrs.patientReport.patientReportItemValues}" var="prv" >
-                                            <h:panelGroup rendered="#{prv.investigationItem.ixItemType eq 'Value' and prv.investigationItem.ixItemValueType eq 'Memo' and prv.investigationItem.retired eq false and prv.lobValue ne '' and prv.lobValue ne null and prv.investigationItem.transCssTop gt 50 }" >
+                                            <h:panelGroup rendered="#{prv.investigationItem.ixItemType eq 'Value' and prv.investigationItem.ixItemValueType eq 'Memo' and prv.investigationItem.retired eq false and prv.lobValue ne '' and prv.lobValue ne null and prv.investigationItem.riTop gt 50 }" >
                                                 <tr>
                                                     <td style="min-width: 250px;padding-left: 1px; padding-right: 1px; vertical-align: top;">
                                                         <h:outputLabel value="#{prv.investigationItem.name}"  escape="false" />
