--- a/src/main/webapp/channel/channel_phone_view.xhtml
+++ b/src/main/webapp/channel/channel_phone_view.xhtml
@@ -6,51 +6,59 @@
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:h="http://java.sun.com/jsf/html">
 
-    <ui:define name="content">
-        <p:outputLabel value="Nurse View"/>
-        <p:panel>
-            <f:facet name="header">
-                <h:panelGrid columns="2">
-                    <p:outputLabel value="Consultant"/>
-                    <p:outputLabel value="#{channelReportController.serviceSession.staff.person.nameWithTitle}"/>
-                    <p:outputLabel value="Date"/>
-                    <h:outputLabel value="#{channelReportController.serviceSession.sessionAt}" >
-                        <f:convertDateTime pattern="dd MM yyyy"/>
-                    </h:outputLabel>
-                    <p:outputLabel value="Session Name"/>
-                    <h:outputLabel value="#{channelReportController.serviceSession.name}" />
-                </h:panelGrid>
-            </f:facet>
+    <ui:define name="content">        
+        <h:form>
+            <p:panel>
+                <f:facet name="header">
+                    <h:panelGrid columns="2">
+                        <p:outputLabel value="Phone View"/>
+                        <p:outputLabel/>
+                        <p:outputLabel value="Consultant"/>
+                        <p:outputLabel value="#{channelReportController.serviceSession.staff.person.nameWithTitle}"/>
+                        <p:outputLabel value="Date"/>
+                        <h:outputLabel value="#{channelReportController.serviceSession.sessionAt}" >
+                            <f:convertDateTime pattern="dd MM yyyy"/>
+                        </h:outputLabel>
+                        <p:outputLabel value="Session Name"/>
+                        <h:outputLabel value="#{channelReportController.serviceSession.name}" />
+                    </h:panelGrid>
 
-            <p:dataTable value="#{channelReportController.billSessionsNurse}" var="bs">
-                
-                <p:column headerText="No">#{bs.serialNo}</p:column>
-                <p:column headerText="Booking Id">#{bs.bill.bookingId}</p:column>
-                <p:column headerText="Patient Name">#{bs.bill.patient.person.nameWithTitle}</p:column>
-                <p:column headerText="Phone No">#{bs.bill.patient.person.phone}</p:column>
-                <p:column headerText="Time">
-                    <h:outputLabel value="#{bs.sessionTime}">
-                        <f:convertDateTime pattern="hh:mm:ss a"/>
-                    </h:outputLabel>
-                </p:column>
-                <p:column headerText="Paid or Not">
-                    <p:outputLabel rendered="#{bs.bill.billType eq 'ChannelCredit'}" value="Credit" style="color: red;"/>
-                    <p:outputLabel rendered="#{bs.bill.billType eq 'ChannelPaid'}" value="Paid"/>
-                </p:column>                
-                <p:column headerText="Agent Name">
-                    <p:outputLabel value="#{bs.bill.fromInstitution.name}"/>  
-                    <p:outputLabel value="(#{bs.bill.fromInstitution.institutionCode})" rendered="#{bs.bill.fromInstitution ne null}"/> 
-                </p:column>                
-                <p:column headerText="Agent Ref No">
-                    <p:outputLabel value="#{bs.bill.insId}"/>                          
-                </p:column> 
-                <p:column headerText="P/A">  
-                    <p:outputLabel value="Absent"  rendered="#{bs.absent}"/>  
-                </p:column>
+                </f:facet>
+                <p:commandButton value="Print" ajax="fasle" action="#">
+                    <p:printer target="phoneView"/>           
+                </p:commandButton>
+                <p:commandButton ajax="false" action="/channel/channel_booking" value="Back" ></p:commandButton>
 
-            </p:dataTable>
+                <p:dataTable id="phoneView" value="#{channelReportController.billSessionsNurse}" var="bs">
 
-        </p:panel>
+                    <p:column headerText="No">#{bs.serialNo}</p:column>
+                    <p:column headerText="Booking Id">#{bs.bill.bookingId}</p:column>
+                    <p:column headerText="Patient Name">#{bs.bill.patient.person.nameWithTitle}</p:column>
+                    <p:column headerText="Phone No">#{bs.bill.patient.person.phone}</p:column>
+                    <p:column headerText="Time">
+                        <h:outputLabel value="#{bs.sessionTime}">
+                            <f:convertDateTime pattern="hh:mm:ss a"/>
+                        </h:outputLabel>
+                    </p:column>
+                    <p:column headerText="Paid or Not">
+                        <p:outputLabel rendered="#{bs.bill.billType eq 'ChannelCredit'}" value="Credit" style="color: red;"/>
+                        <p:outputLabel rendered="#{bs.bill.billType eq 'ChannelPaid'}" value="Paid"/>
+                    </p:column>                
+                    <p:column headerText="Agent Name">
+                        <p:outputLabel value="#{bs.bill.fromInstitution.name}"/>  
+                        <p:outputLabel value="(#{bs.bill.fromInstitution.institutionCode})" rendered="#{bs.bill.fromInstitution ne null}"/> 
+                    </p:column>                
+                    <p:column headerText="Agent Ref No">
+                        <p:outputLabel value="#{bs.bill.insId}"/>                          
+                    </p:column> 
+                    <p:column headerText="P/A">  
+                        <p:outputLabel value="Absent"  rendered="#{bs.absent}"/>  
+                    </p:column>
+
+                </p:dataTable>
+
+            </p:panel>
+        </h:form>
     </ui:define>
 
 
